--- a/index.html
+++ b/index.html
@@ -9,12 +9,317 @@
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href="assets/css/uikit-reset.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
-    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script> -->
-    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.slim.js"></script> -->
+    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js"></script> -->
+    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.slim.js"></script> -->
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
 </head>
 
 <body>
+    <div class="HeaderMini uk-background-secondary uk-light uk-visible@s">
+        <div class="uk-container">
+            <div class="uk-text-small" uk-grid>
+                <div class="uk-width-expand"><span class="svg_mini"><svg xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 384 512">
+                            <path
+                                d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z" />
+                        </svg></span> Пензенская область, с. Наровчат, ул. Максима Горького, 38А</div>
+                <div class="uk-width-auto">Мы в соц. сетях <a class="svg_mini" href=""><svg
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                            <path
+                                d="M545 117.7c3.7-12.5 0-21.7-17.8-21.7h-58.9c-15 0-21.9 7.9-25.6 16.7 0 0-30 73.1-72.4 120.5-13.7 13.7-20 18.1-27.5 18.1-3.7 0-9.4-4.4-9.4-16.9V117.7c0-15-4.2-21.7-16.6-21.7h-92.6c-9.4 0-15 7-15 13.5 0 14.2 21.2 17.5 23.4 57.5v86.8c0 19-3.4 22.5-10.9 22.5-20 0-68.6-73.4-97.4-157.4-5.8-16.3-11.5-22.9-26.6-22.9H38.8c-16.8 0-20.2 7.9-20.2 16.7 0 15.6 20 93.1 93.1 195.5C160.4 378.1 229 416 291.4 416c37.5 0 42.1-8.4 42.1-22.9 0-66.8-3.4-73.1 15.4-73.1 8.7 0 23.7 4.4 58.7 38.1 40 40 46.6 57.9 69 57.9h58.9c16.8 0 25.3-8.4 20.4-25-11.2-34.9-86.9-106.7-90.3-111.5-8.7-11.2-6.2-16.2 0-26.2.1-.1 72-101.3 79.4-135.6z" />
+                        </svg></a></div>
+            </div>
+        </div>
+    </div>
+    <header class="HomeHeader uk-background-primary uk-padding uk-padding-remove-horizontal"
+        uk-height-viewport="offset-bottom: 20">
+        <div class="uk-container">
+            <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" uk-scrollspy="cls: uk-animation-slide-top; target: > nav; delay: 300; repeat: true">
+                <nav class="uk-navbar-container uk-border-pill uk-box-shadow-large" uk-navbar>
+                    <div class="uk-navbar-left uk-margin-medium-left">
+                        <a class="uk-navbar-item uk-logo" href="/">Элли</a>
+                        <ul class="uk-navbar-nav uk-visible@m">
+                            <li><a href="a.html">О нас</a></li>
+                            <li><a href="z.html">Занятия и стоимость</a></li>
+                            <li><a href="o.html">Отзывы</a></li>
+                            <li><a href="c.html">Контакты</a></li>
+                        </ul>
+                    </div>
+                    <div class="uk-navbar-right uk-margin-medium-right">
+                        <a class="uk-visible@s" href="tel:+1234567890">+1234567890</a>
+                        <button class="uk-button uk-button-link uk-hidden@m" uk-navbar-toggle-icon
+                            uk-toggle="target: #offcanvas-nav-primary"></button>
+                    </div>
+                </nav>
+            </div>
+            <div class="uk-child-width-1-2@m uk-grid-collapse uk-margin-xlarge-top" uk-grid>
+                <div>
+                    <h1 class="hstyle">Детский центр развития «Элли»</h1>
+                    <div class="uk-text-large">Развиваемся, но сохраняем детство!</div>
+                    <button
+                        class="uk-button uk-button-large uk-button-danger uk-border-pill uk-box-shadow-large uk-margin-top"
+                        uk-toggle="target: #ZapisModal">Записаться</button>
+                </div>
+                <div class="uk-height-large uk-background-cover uk-background-top-center"
+                    style="background-image: url(content/kids-160168.png);" uk-scrollspy="cls: uk-animation-slide-right; repeat: true"></div>
+            </div>
+        </div>
+    </header>
+
+    <div id="offcanvas-nav-primary" uk-offcanvas="overlay: true">
+        <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+            <button class="uk-offcanvas-close" type="button" uk-close></button>
+            <h1 class="hstyle uk-text-center">Детский центр развития «Элли»</h1>
+            <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Занятия и стоимость</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <div class="uk-text-center">
+                <div>Пензенская область, с. Наровчат, ул. Максима Горького, 38А</div>
+                <a href="tel:+1234567890">+1234567890</a>
+            </div>
+        </div>
+    </div>
+
+    <div id="ZapisModal" class="uk-flex-top" uk-modal>
+        <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical uk-border-rounded">
+            <button class="uk-modal-close-default" type="button" uk-close></button>
+            <form class="uk-padding uk-padding-remove-vertical">
+                <fieldset class="uk-fieldset">
+
+                    <legend class="uk-legend uk-text-center">Записаться на занятие</legend>
+
+                    <div class="uk-margin">
+                        <input class="uk-input uk-form-large uk-border-pill uk-box-shadow-small" type="text" placeholder="Имя">
+                    </div>
+                    <div class="uk-margin">
+                        <input class="uk-input uk-form-large uk-border-pill uk-box-shadow-small" type="tel" placeholder="Телефон">
+                    </div>
+                    <div class="uk-margin">
+                        <select class="uk-select uk-form-large uk-border-pill uk-box-shadow-small">
+                            <option>Выберете занятие</option>
+                            <option>Раннее развитие</option>
+                            <option>Подготовка к школе</option>
+                            <option>Группа продленного дня</option>
+                        </select>
+                    </div>
+                    <div class="uk-margin">
+                        <textarea class="uk-textarea uk-form-large uk-border-rounded uk-box-shadow-small" rows="5" placeholder="Комментарий"></textarea>
+                    </div>
+                    <button
+                        class="uk-button uk-button-large uk-width-1-1 uk-button-danger uk-box-shadow-large uk-border-pill">Записаться</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+    <section class="HomeSection1 uk-section">
+        <div class="uk-container uk-container-small uk-text-center">
+            <div uk-grid>
+                <div class="uk-width-1-1">
+                    <h2 class="uk-heading-small uk-text-primary">Почему родители выбирают нас</h2>
+                </div>
+            </div>
+            <div class="uk-child-width-1-3@s uk-grid-large uk-flex-center" uk-grid uk-scrollspy="cls: uk-animation-slide-bottom; target: > div; delay: 300; repeat: true">
+                <div>
+                    <div class="uk-padding uk-padding-remove-vertical">
+                        <div class="uk-padding uk-background-default uk-border-circle uk-box-shadow-medium"><img
+                                src="content/g144.svg" alt=""></div>
+                    </div>
+                    <h3 class="uk-margin-top">Время работы 9:00 — 21:00</h3>
+                </div>
+                <div>
+                    <div class="uk-padding uk-padding-remove-vertical">
+                        <div class="uk-padding uk-background-default uk-border-circle uk-box-shadow-medium"><img
+                                src="content/g2069.png" alt=""></div>
+                    </div>
+                    <h3 class="uk-margin-top">Группы до 3 детей, индивидуальный подход</h3>
+                </div>
+                <div>
+                    <div class="uk-padding uk-padding-remove-vertical">
+                        <div class="uk-padding uk-background-default uk-border-circle uk-box-shadow-medium"><img
+                                src="content/g1261.png" alt=""></div>
+                    </div>
+                    <h3 class="uk-margin-top">Развитие и образование через игру</h3>
+                </div>
+                <div>
+                    <div class="uk-padding uk-padding-remove-vertical">
+                        <div class="uk-padding uk-background-default uk-border-circle uk-box-shadow-medium"><img
+                                src="content/path3239.png" alt=""></div>
+                    </div>
+                    <h3 class="uk-margin-top">Теплая семейная атмосфера</h3>
+                </div>
+                <div>
+                    <div class="uk-padding uk-padding-remove-vertical">
+                        <div class="uk-padding uk-background-default uk-border-circle uk-box-shadow-medium"><img
+                                src="content/g2981.png" alt=""></div>
+                    </div>
+                    <h3 class="uk-margin-top">Шаговая доступность от дома, парковка</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="uk-section">
+        <div class="uk-container uk-container-large">
+            <div uk-grid>
+                <div class="uk-panel">
+                    <h2 class="uk-heading-small uk-text-secondary hstyle2">Наши занятия</h2>
+                    <p>По сей день мы усложняем детям жизнь, считая, что рано прививать им те или иные навыки, и таким
+                        образом упускаем «лучшее время».</p>
+                    <p>В мире больших возможностей образование становится более ранним, поэтому важно начать развивать
+                        ребенка с младенческого возраста.</p>
+                </div>
+            </div>
+            <div class="uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid
+                uk-height-match="target: > div > a > .uk-card > .uk-card-body" uk-scrollspy="cls: uk-animation-fade; target: > div; delay: 300; repeat: true">
+                <div>
+                    <a class="uk-link-reset uk-animation-toggle" tabindex="0" href="">
+                        <div
+                            class="uk-card uk-card-default uk-border-rounded uk-box-shadow-large uk-box-shadow-hover-xlarge">
+                            <div class="uk-card-header">
+                                <h3 class="uk-card-title">Раннее развитие</h3>
+                            </div>
+                            <div class="uk-card-body">
+                                <img class="uk-margin-bottom" src="content/girl-160166.png" alt="">
+                                <div>Центр детского развития «Элли» спешит узнать и развить способности вашего ребенка!
+                                </div>
+                                <ul>
+                                    <li>Развитие самостоятельности</li>
+                                    <li>Социализация</li>
+                                    <li>Интеллектуальное развитие</li>
+                                    <li>Развитие координации и моторики</li>
+                                </ul>
+                            </div>
+                            <div class="uk-card-footer">
+                                <button
+                                    class="uk-button uk-button-large uk-button-danger uk-border-pill uk-box-shadow-large uk-margin-top"
+                                    uk-toggle="target: #ZapisModal">Записаться</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-link-reset uk-animation-toggle" tabindex="0" href="">
+                        <div
+                            class="uk-card uk-card-default uk-border-rounded uk-box-shadow-large uk-box-shadow-hover-xlarge">
+                            <div class="uk-card-header">
+                                <h3 class="uk-card-title">Подготовка к школе</h3>
+                            </div>
+                            <div class="uk-card-body">
+                                <img class="uk-margin-bottom" src="content/girl-160167.png" alt="">
+                                <div>Скоро в школу?! Вы родители будущего первоклассника и впереди собеседование в
+                                    школу?
+                                    Добро пожаловать!</div>
+                                <ul>
+                                    <li>Научить ребенка читать, писать, считать, решать простые арифметические задачи
+                                    </li>
+                                    <li>Развить память, внимание и логику</li>
+                                    <li>Адаптировать ребенка к школе</li>
+                                </ul>
+                            </div>
+                            <div class="uk-card-footer">
+                                <button
+                                    class="uk-button uk-button-large uk-button-danger uk-border-pill uk-box-shadow-large uk-margin-top"
+                                    uk-toggle="target: #ZapisModal">Записаться</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a class="uk-link-reset uk-animation-toggle" tabindex="0" href="">
+                        <div
+                            class="uk-card uk-card-default uk-border-rounded uk-box-shadow-large uk-box-shadow-hover-xlarge">
+                            <div class="uk-card-header">
+                                <h3 class="uk-card-title">Группа продленного дня</h3>
+                            </div>
+                            <div class="uk-card-body">
+                                <img class="uk-margin-bottom" src="content/boy-160174.png" alt="">
+                                <div>Центр детского развития «Элли» приглашает на занятия по восполнению неусвоенных
+                                    знаний
+                                    во
+                                    время школьной программы.</div>
+                                <ul>
+                                    <li>Помощь в выполнении домашнего задания по всем предметам школьной программы</li>
+                                    <li>Дополнительные занятия с целью закрепления материала школьной программы</li>
+                                    <li>Проработка неусвоенных тем, восполнение пробелов в знаниях</li>
+                                </ul>
+                            </div>
+                            <div class="uk-card-footer">
+                                <button
+                                    class="uk-button uk-button-large uk-button-danger uk-border-pill uk-box-shadow-large uk-margin-top"
+                                    uk-toggle="target: #ZapisModal">Записаться</button>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="uk-section">
+        <div class="uk-container">
+            <div class="uk-child-width-1-2@s uk-flex-middle" uk-grid>
+                <div class="uk-panel"
+                    uk-scrollspy="target: > div; cls: uk-animation-fade uk-animation-fast; delay: 500">
+                    <div uk-scrollspy-class="uk-animation-slide-bottom">
+                        <img src="content/balloon-5966383.png" alt="">
+                    </div>
+                    <div class="uk-position-center uk-visible@s"><img src="content/school-4527713_1920.png" alt=""></div>
+                </div>
+                <div>
+                    <h3>Что такое «Элли»? </h3>
+                    <div class="uk-panel">
+                        <p>«Элли» - это волшебное место, которое окутает вашего ребенка заботой, теплотой и вниманием,
+                            обеспечит индивидуальный подход и учет особенностей каждого малыша.</p>
+                        <p>Место, где дети научатся следовать своим мечтам уже сегодня. Все, что мы делаем, способствует
+                            раскрытию не только умственного, психологического и физического потенциала вашего ребенка,
+                            но и, безусловно, воспитывает его как личность.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="uk-background-secondary uk-padding uk-padding-remove-horizontal uk-margin-large-top">
+        <div class="uk-container">
+            <div class="uk-child-width-1-4@s uk-light uk-text-small" uk-grid>
+                <div>
+                    <ul class="uk-nav uk-nav-default">
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">Занятия и стоимость</a></li>
+                        <li><a href="#">Отзывы</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="uk-nav uk-nav-default">
+                        <li><a href="#">Раннее развитие</a></li>
+                        <li><a href="#">Подготовка к школе</a></li>
+                        <li><a href="#">Группа продленного дня</a></li>
+                    </ul>
+                </div>
+                <div class="uk-panel">
+                    <div>ИП Моторина Оксана Александровна</div>
+                    <div>ИНН 582462411540</div>
+                    <div>ОГРНИП 321583500014771</div>
+                    <div class="uk-margin-top"><a class="uk-link-reset" href="tel:+1234567890">+1234567890</a></div>
+                </div>
+                <div>
+                    <div>Мы в соц. сетях <a class="svg_mini" href=""><svg xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 576 512">
+                                <path
+                                    d="M545 117.7c3.7-12.5 0-21.7-17.8-21.7h-58.9c-15 0-21.9 7.9-25.6 16.7 0 0-30 73.1-72.4 120.5-13.7 13.7-20 18.1-27.5 18.1-3.7 0-9.4-4.4-9.4-16.9V117.7c0-15-4.2-21.7-16.6-21.7h-92.6c-9.4 0-15 7-15 13.5 0 14.2 21.2 17.5 23.4 57.5v86.8c0 19-3.4 22.5-10.9 22.5-20 0-68.6-73.4-97.4-157.4-5.8-16.3-11.5-22.9-26.6-22.9H38.8c-16.8 0-20.2 7.9-20.2 16.7 0 15.6 20 93.1 93.1 195.5C160.4 378.1 229 416 291.4 416c37.5 0 42.1-8.4 42.1-22.9 0-66.8-3.4-73.1 15.4-73.1 8.7 0 23.7 4.4 58.7 38.1 40 40 46.6 57.9 69 57.9h58.9c16.8 0 25.3-8.4 20.4-25-11.2-34.9-86.9-106.7-90.3-111.5-8.7-11.2-6.2-16.2 0-26.2.1-.1 72-101.3 79.4-135.6z" />
+                            </svg></a></div>
+                </div>
+            </div>
+            <div class="uk-light uk-text-small" uk-grid>
+                <div>© 2022 Детский центр развития «Элли»</div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.15.16/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.15.16/js/uikit-icons.min.js"></script>
