--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky" uk-scrollspy="cls: uk-animation-slide-top; target: > nav; delay: 300; repeat: true">
                 <nav class="uk-navbar-container uk-border-pill uk-box-shadow-large" uk-navbar>
                     <div class="uk-navbar-left uk-margin-medium-left">
-                        <a class="uk-navbar-item uk-logo" href="https://webproviderngo.github.io/dcrelli/o.html">Элли</a>
+                        <a class="uk-navbar-item uk-logo" href="https://webproviderngo.github.io/dcrelli">Элли</a>
                         <ul class="uk-navbar-nav uk-visible@m">
                             <li><a href="a.html">О нас</a></li>
                             <li><a href="z.html">Занятия и стоимость</a></li>
